--- a/index.html
+++ b/index.html
@@ -10,45 +10,48 @@
 <body>
   
   <!-- header -->
-  <section src="https://source.unsplash.com/720x600/?workout,gym,fitness">
+  <!-- nav bar start -->
 
-  
   <header class="text-gray-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/50x60/?fitness">
+        <!-- <svg xmlns="" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-        </svg>
+        </svg> -->
         <span class="ml-3 text-xl">MUSCLE MANSION</span>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900">Home</a>
-        <a class="mr-5 hover:text-gray-900">about us</a>
-        <a class="mr-5 hover:text-gray-900">our services</a>
-        <a class="mr-5 hover:text-gray-900">gallery</a>
+        <a class="mr-5 hover:text-gray-900" a href="index.html">HOME</a>
+        <a class="mr-5 hover:text-gray-900" a href="aboutus.html">ABOUT US</a>
+        <a class="mr-5 hover:text-gray-900" a href="programs.html">PROGRAMS</a>
+        <a class="mr-5 hover:text-gray-900" a href="gear.html">GEAR</a>
+        <a class="mr-5 hover:text-gray-900" a href="blogs.html">BLOGS</a>
+        <a class ="inline-flex text-white bg-gray-500 border-0 py-2 px-6 focus:outline-none hover:bg-gray-600 rounded text-lg" a href="contact.html">CONTACT US</a></button>
       </nav>
-      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Button
-        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-          <path d="M5 12h14M12 5l7 7-7 7">click</path>
-        </svg>
-      </button>
+     
     </div>
   </header>
+  <!-- nav bar wnd -->
   <!-- information -->
   <section class="text-gray-600 body-font bg-gray-300">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">WELCOME TO MUSCLE MANSION
         </h1>
-        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
-        <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">view more
+        <p class="mb-8 leading-relaxed">why u should join Muscle Mansion? Muscle gaining refers to the process of increasing muscle mass in the body through 
+          physical exercise, proper nutrition, and rest. When you engage in strength training exercises like weightlifting or bodyweight exercises, you create small tears in your muscle fibers. 
+          Your body then repairs these tears by building new muscle tissue, which can result in increased muscle size, strength, and endurance.
+          
+        </p>
+        <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" a href="">view more</a>
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7">click</path>
           </svg>
         </button>
       </div>
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?GYM, gym equipments">
+        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?gym,gym equipment">
       </div>
     </div>
   </section>
@@ -56,15 +59,17 @@
   <section class="text-gray-600 body-font bg-gray-400">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?fitness">
+        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?fitness anabolic,fitness,bicps">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">MAPS
           <br class="hidden lg:inline-block">ANABOLIC
         </h1>
-        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+        <p class="mb-8 leading-relaxed">The term "anabolic" refers to a metabolic process in the body that involves the building up of complex molecules from simpler ones, 
+          typically involving the synthesis of new tissue or molecules. In the context of exercise and athletics, the term "anabolic" is often used to refer to the use of anabolic steroids, 
+          which are synthetic substances that mimic the effects of testosterone in the body.</p>
         <div class="flex justify-center">
-          <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">view more
+          <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" a href="">view more</a>
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7">click</path>
             </svg>
@@ -80,15 +85,17 @@
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">MAPS
           <br class="hidden lg:inline-block">PERFORMANCE
         </h1>
-        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
-        <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">view more
+        <p class="mb-8 leading-relaxed">Performance refers to how effectively and efficiently a person or group completes a task or achieves a goal. 
+          In the context of athletics or sports, performance may refer to an individual's ability to perform a specific physical activity or skill, 
+          such as running, jumping, throwing, or hitting a ball.</p>
+        <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" a href="">learn more</a>
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7">click</path>
           </svg>
         </button>
       </div>
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?workout">
+        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?workout,weight lifting">
       </div>
     </div>
   </section>
@@ -100,21 +107,23 @@
           <br class="hidden lg:inline-block">AESTHIC
 
         </h1>
-        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
-        <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">view more
+        <p class="mb-8 leading-relaxed">The term "aesthetic" refers to the appreciation of beauty and visual appeal, and can be applied to a variety of different fields, including art, architecture, design, and fashion. In the context of fitness and exercise, the term "aesthetic" often refers to a particular ideal or style of physique that emphasizes muscular development and symmetry.
+
+        </p>
+        <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" a href="">view more</a>
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7">click</path>
           </svg>
         </button>
       </div>
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?pump body">
+        <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?yoga">
       </div>
     </div>
   </section>
   <!-- header end -->
 </body>
-
+<!-- informatiom -->
 <section class="text-gray-600 body-font bg-gray-300">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
@@ -126,14 +135,14 @@
         <div class="bg-gray-100 p-6 rounded-lg">
           <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/t1.1.jpg" alt="content">
           <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
-          <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Chichen Itza</h2>
+          <h2 class="text-lg text-gray-900 font-medium title-font mb-4">abc</h2>
           <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
         </div>
       </div>
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-100 p-6 rounded-lg">
           <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/t2.1.jpg" alt="content">
-          <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
+          <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">xyz</h3>
           <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Colosseum Roma</h2>
           <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
         </div>
@@ -141,7 +150,7 @@
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-100 p-6 rounded-lg">
           <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/t3.1.jpg" alt="content">
-          <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
+          <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">lmn</h3>
           <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Great Pyramid of Giza</h2>
           <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
         </div>
@@ -149,7 +158,7 @@
       <div class="xl:w-1/4 md:w-1/2 p-4">
         <div class="bg-gray-100 p-6 rounded-lg">
           <img class="h-40 rounded w-full object-cover object-center mb-6" src="images/t4.1.jpg" alt="content">
-          <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
+          <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">mcd</h3>
           <h2 class="text-lg text-gray-900 font-medium title-font mb-4">San Francisco</h2>
           <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
         </div>
@@ -157,6 +166,7 @@
     </div>
   </div>
 </section>
+<!-- informatiom end -->
 <!-- footer -->
 
 <footer class="text-gray-600 body-font">
@@ -167,8 +177,9 @@
       </svg>
       <span class="ml-3 text-xl">MUSCLE MANSION</span>
     </a>
-    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 Tailblocks —
-      <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@knyttneve</a>
+    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© Copyright 2023 -  
+      <a href="" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">CodeWave LLC - </a>
+      <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">All rights are reserved
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
       <a class="text-gray-500">
